--- a/oneway/on_permutation.ipynb
+++ b/oneway/on_permutation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e25f348c",
+   "id": "31f204ad",
    "metadata": {},
    "source": [
     "# Unbalanced two-way ANOVA\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b2d760f",
+   "id": "e1fc4281",
    "metadata": {},
    "source": [
     "## Back again to the example\n"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0388419c",
+   "id": "e063906a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab908f86",
+   "id": "6dc498e0",
    "metadata": {},
    "source": [
     "We return again to our dataset giving amount of weight lost (in kilograms)\n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "50de8ab8",
+   "id": "5609e66e",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4232edfc",
+   "id": "c875a05e",
    "metadata": {},
    "source": [
     "Pandas `groupby` can classify each row using *both* the `gender` label (level) and the `diet` label (level).  Notice we have different number is the six possible sub-groups."
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "97e77fa5",
+   "id": "245c2fdc",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c47deeec",
+   "id": "e73fd925",
    "metadata": {},
    "source": [
     "## General linear model notation\n",
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "195136b2",
+   "id": "910a9857",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1947e5c3",
+   "id": "f6b57fa5",
    "metadata": {},
    "source": [
     "Next we need the design matrix for the interaction terms:"
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2f14b4a4",
+   "id": "f2d2e0cc",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "674a90a1",
+   "id": "6b281cb1",
    "metadata": {},
    "source": [
     "Full design:"
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "882e017c",
+   "id": "f0aedafe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0969dc3",
+   "id": "c020b218",
    "metadata": {},
    "source": [
     "The data we are fitting:"
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3be620f9",
+   "id": "2b97919f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2975892",
+   "id": "2ebdb487",
    "metadata": {},
    "source": [
     "Least square parameters for full design:"
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5694ebc9",
+   "id": "a12daeed",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d91a529b",
+   "id": "f2a0ce2b",
    "metadata": {},
    "source": [
     "Fitted y values:"
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "998e60dc",
+   "id": "81c4dd5d",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "674e3371",
+   "id": "0c5cfcd1",
    "metadata": {},
    "source": [
     "Errors:"
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8ae9af93",
+   "id": "51df35cd",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "051197af",
+   "id": "c280751a",
    "metadata": {},
    "source": [
     "Sum of squared errors:"
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "796edab6",
+   "id": "e3b71b57",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a841dafd",
+   "id": "d96b37bd",
    "metadata": {},
    "source": [
     "Compare to residual sum of squares value in Statsmodel ANOVA table:"
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b5ac34e4",
+   "id": "2267f36b",
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0724045",
+   "id": "3149b925",
    "metadata": {},
    "source": [
     "We can write that all in one go:"
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "501ad052",
+   "id": "f31c4fa0",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99e4a3e9",
+   "id": "7bb00f79",
    "metadata": {},
    "source": [
     "That is also the same calculation as:"
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a0bc7559",
+   "id": "405d7ae3",
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "939740f2",
+   "id": "56d24275",
    "metadata": {},
    "source": [
     "The $H$ matrix above is called the *hat* matrix, because it \"puts the hat on\"\n",
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62ce2a40",
+   "id": "3bec6a50",
    "metadata": {},
    "source": [
     "In fact, using our matrix algebra, we can write the overall calculation you see in the `e_again` cell above, like this:"
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a0d77d98",
+   "id": "49b05b4a",
    "metadata": {},
    "outputs": [
     {
@@ -859,31 +859,191 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89995e26",
+   "id": "65af06a7",
    "metadata": {},
    "source": [
-    "`rfm` above is the *residual forming matrix*, so called because, as you see, it includes the whole matrix calculation to turn the `y` values into the errors (residuals) with one matrix multiplication.  Multiplying with this matrix extracts all the information that can be modeled by the design matrix `X`."
+    "`rfm` above is the *residual forming matrix*, so called because, as you see, it includes the whole matrix calculation to turn the `y` values into the errors (residuals) with one matrix multiplication.  Multiplying with this matrix extracts all the information that can be modeled by the design matrix `X`.\n",
+    "\n",
+    "Notice that `H` and `rfm` *do not depend on `y`* - they depend only on `X`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25d739c5",
+   "metadata": {},
+   "source": [
+    "Now we calculate the *extra sum of squares* adding the interaction part of the design to a design without the interaction part."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e84e1a90",
+   "execution_count": 16,
+   "id": "60456b6e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "410.2331115610073"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Hat matrix for main effects part of design.\n",
+    "H1 = X1 @ np.linalg.pinv(X1)\n",
+    "# Residual forming matrix for X1\n",
+    "rfm1 = np.eye(n) - H1\n",
+    "# Errors and residual sum of squares\n",
+    "e1 = rfm1 @ y\n",
+    "RSS1 = np.sum(e1 ** 2)\n",
+    "RSS1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bf28181c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "376.32904329004316"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Residual sum of squares for full design (X1 with X2)\n",
+    "# We calculated this above, but just for completeness,\n",
+    "# calculate again.\n",
+    "H = X @ np.linalg.pinv(X)\n",
+    "rfm = np.eye(n) - H\n",
+    "e = rfm @ y\n",
+    "RSS = np.sum(e ** 2)\n",
+    "RSS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b3cce889",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33.90406827096416"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extra sum of squares\n",
+    "ESS = RSS1 - RSS\n",
+    "ESS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c2d7665a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum_sq</th>\n",
+       "      <th>df</th>\n",
+       "      <th>F</th>\n",
+       "      <th>PR(&gt;F)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>gender</th>\n",
+       "      <td>0.168696</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.031379</td>\n",
+       "      <td>0.859910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>diet</th>\n",
+       "      <td>60.417220</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.619026</td>\n",
+       "      <td>0.005456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender:diet</th>\n",
+       "      <td>33.904068</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.153204</td>\n",
+       "      <td>0.048842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Residual</th>\n",
+       "      <td>376.329043</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 sum_sq    df         F    PR(>F)\n",
+       "gender         0.168696   1.0  0.031379  0.859910\n",
+       "diet          60.417220   2.0  5.619026  0.005456\n",
+       "gender:diet   33.904068   2.0  3.153204  0.048842\n",
+       "Residual     376.329043  70.0       NaN       NaN"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A reminder of the ANOVA table\n",
+    "# Notice that we have just calculated the ESS for gender:diet\n",
+    "sm.stats.anova_lm(sm_fit, typ=2)"
+   ]
   }
  ],
  "metadata": {
   "jupytext": {
    "notebook_metadata_filter": "all,-language_info",
-   "split_at_heading": true,
-   "text_representation": {
-    "extension": ".Rmd",
-    "format_name": "rmarkdown",
-    "format_version": "1.2",
-    "jupytext_version": "1.8.2"
-   }
+   "split_at_heading": true
   },
   "kernelspec": {
    "display_name": "Python 3",
