--- a/oneway/on_permutation.ipynb
+++ b/oneway/on_permutation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "31f204ad",
+   "id": "1df579ee",
    "metadata": {},
    "source": [
     "# Unbalanced two-way ANOVA\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1fc4281",
+   "id": "78be5829",
    "metadata": {},
    "source": [
     "## Back again to the example\n"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e063906a",
+   "id": "d70e4f06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dc498e0",
+   "id": "68144b27",
    "metadata": {},
    "source": [
     "We return again to our dataset giving amount of weight lost (in kilograms)\n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5609e66e",
+   "id": "1ba0fc53",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c875a05e",
+   "id": "34b62055",
    "metadata": {},
    "source": [
     "Pandas `groupby` can classify each row using *both* the `gender` label (level) and the `diet` label (level).  Notice we have different number is the six possible sub-groups."
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "245c2fdc",
+   "id": "4bc142ac",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e73fd925",
+   "id": "0272709b",
    "metadata": {},
    "source": [
     "## General linear model notation\n",
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "910a9857",
+   "id": "b99f9b14",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6b57fa5",
+   "id": "ab3f8477",
    "metadata": {},
    "source": [
     "Next we need the design matrix for the interaction terms:"
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f2d2e0cc",
+   "id": "2b9d4305",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b281cb1",
+   "id": "657230c4",
    "metadata": {},
    "source": [
     "Full design:"
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f0aedafe",
+   "id": "87d76c58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c020b218",
+   "id": "16486657",
    "metadata": {},
    "source": [
     "The data we are fitting:"
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2b97919f",
+   "id": "3549d204",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ebdb487",
+   "id": "c511bb64",
    "metadata": {},
    "source": [
     "Least square parameters for full design:"
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a12daeed",
+   "id": "8748c3f5",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2a0ce2b",
+   "id": "886ab3d8",
    "metadata": {},
    "source": [
     "Fitted y values:"
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "81c4dd5d",
+   "id": "25577b75",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c5cfcd1",
+   "id": "6f927ff6",
    "metadata": {},
    "source": [
     "Errors:"
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "51df35cd",
+   "id": "e8b5f82d",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c280751a",
+   "id": "2bacd84d",
    "metadata": {},
    "source": [
     "Sum of squared errors:"
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e3b71b57",
+   "id": "56859dad",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d96b37bd",
+   "id": "34fb170c",
    "metadata": {},
    "source": [
     "Compare to residual sum of squares value in Statsmodel ANOVA table:"
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2267f36b",
+   "id": "d9983679",
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3149b925",
+   "id": "68e3ff6e",
    "metadata": {},
    "source": [
     "We can write that all in one go:"
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f31c4fa0",
+   "id": "a59e932f",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bb00f79",
+   "id": "ec6ca0d9",
    "metadata": {},
    "source": [
     "That is also the same calculation as:"
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "405d7ae3",
+   "id": "64fce4f4",
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56d24275",
+   "id": "4c1459a1",
    "metadata": {},
    "source": [
     "The $H$ matrix above is called the *hat* matrix, because it \"puts the hat on\"\n",
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bec6a50",
+   "id": "635d207c",
    "metadata": {},
    "source": [
     "In fact, using our matrix algebra, we can write the overall calculation you see in the `e_again` cell above, like this:"
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "49b05b4a",
+   "id": "0e5d092a",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65af06a7",
+   "id": "149ef098",
    "metadata": {},
    "source": [
     "`rfm` above is the *residual forming matrix*, so called because, as you see, it includes the whole matrix calculation to turn the `y` values into the errors (residuals) with one matrix multiplication.  Multiplying with this matrix extracts all the information that can be modeled by the design matrix `X`.\n",
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25d739c5",
+   "id": "15f7a755",
    "metadata": {},
    "source": [
     "Now we calculate the *extra sum of squares* adding the interaction part of the design to a design without the interaction part."
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "60456b6e",
+   "id": "0c458715",
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bf28181c",
+   "id": "1fc84ad6",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b3cce889",
+   "id": "74e9b288",
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c2d7665a",
+   "id": "941b4008",
    "metadata": {},
    "outputs": [
     {
@@ -1037,6 +1037,42 @@
     "# A reminder of the ANOVA table\n",
     "# Notice that we have just calculated the ESS for gender:diet\n",
     "sm.stats.anova_lm(sm_fit, typ=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c1bbf5a",
+   "metadata": {},
+   "source": [
+    "Theorem 2 of Computational Statistics and Data Analysis 54 (2010) 1881–1893 states that we can also calculate the ESS with:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d4d7cc50",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33.90406827096389"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# X2, after removing everything modeled in X1\n",
+    "X_rr = rfm1 @ X2\n",
+    "# Calculate hat matrix for X_rr\n",
+    "H_rr = X_rr @ np.linalg.pinv(X_rr)\n",
+    "# Adjusted SNSQGM metric.\n",
+    "ESS1_via_y = y @ H_rr @ y\n",
+    "# We get exactly the same answer as before.\n",
+    "ESS1_via_y"
    ]
   }
  ],
