--- a/oneway/on_permutation.ipynb
+++ b/oneway/on_permutation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1df579ee",
+   "id": "400653d9",
    "metadata": {},
    "source": [
     "# Unbalanced two-way ANOVA\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78be5829",
+   "id": "cc483550",
    "metadata": {},
    "source": [
     "## Back again to the example\n"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d70e4f06",
+   "id": "cd439408",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68144b27",
+   "id": "a1a60f5d",
    "metadata": {},
    "source": [
     "We return again to our dataset giving amount of weight lost (in kilograms)\n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1ba0fc53",
+   "id": "64c43b37",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34b62055",
+   "id": "2cdb0844",
    "metadata": {},
    "source": [
     "Pandas `groupby` can classify each row using *both* the `gender` label (level) and the `diet` label (level).  Notice we have different number is the six possible sub-groups."
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4bc142ac",
+   "id": "4cc43265",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0272709b",
+   "id": "22180670",
    "metadata": {},
    "source": [
     "## General linear model notation\n",
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b99f9b14",
+   "id": "3c954fe7",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab3f8477",
+   "id": "6e312910",
    "metadata": {},
    "source": [
     "Next we need the design matrix for the interaction terms:"
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2b9d4305",
+   "id": "b6dc8f82",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "657230c4",
+   "id": "f283e85b",
    "metadata": {},
    "source": [
     "Full design:"
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "87d76c58",
+   "id": "3882d2d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16486657",
+   "id": "448f17ae",
    "metadata": {},
    "source": [
     "The data we are fitting:"
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3549d204",
+   "id": "33fe00f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c511bb64",
+   "id": "dd99d712",
    "metadata": {},
    "source": [
     "Least square parameters for full design:"
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8748c3f5",
+   "id": "c00ffa45",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "886ab3d8",
+   "id": "1ceb7203",
    "metadata": {},
    "source": [
     "Fitted y values:"
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "25577b75",
+   "id": "743a9594",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f927ff6",
+   "id": "acc0db1a",
    "metadata": {},
    "source": [
     "Errors:"
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e8b5f82d",
+   "id": "7fe4f996",
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bacd84d",
+   "id": "1f631962",
    "metadata": {},
    "source": [
     "Sum of squared errors:"
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "56859dad",
+   "id": "0349e269",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34fb170c",
+   "id": "af64a852",
    "metadata": {},
    "source": [
     "Compare to residual sum of squares value in Statsmodel ANOVA table:"
@@ -669,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d9983679",
+   "id": "88df5ce5",
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68e3ff6e",
+   "id": "06258b06",
    "metadata": {},
    "source": [
     "We can write that all in one go:"
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a59e932f",
+   "id": "eda23bf2",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec6ca0d9",
+   "id": "1558a290",
    "metadata": {},
    "source": [
     "That is also the same calculation as:"
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "64fce4f4",
+   "id": "5d6f4ce6",
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c1459a1",
+   "id": "9e2710f3",
    "metadata": {},
    "source": [
     "The $H$ matrix above is called the *hat* matrix, because it \"puts the hat on\"\n",
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "635d207c",
+   "id": "ab820802",
    "metadata": {},
    "source": [
     "In fact, using our matrix algebra, we can write the overall calculation you see in the `e_again` cell above, like this:"
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0e5d092a",
+   "id": "7e2a122c",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "149ef098",
+   "id": "6fea3a87",
    "metadata": {},
    "source": [
     "`rfm` above is the *residual forming matrix*, so called because, as you see, it includes the whole matrix calculation to turn the `y` values into the errors (residuals) with one matrix multiplication.  Multiplying with this matrix extracts all the information that can be modeled by the design matrix `X`.\n",
@@ -869,16 +869,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15f7a755",
+   "id": "a4758fe7",
    "metadata": {},
    "source": [
-    "Now we calculate the *extra sum of squares* adding the interaction part of the design to a design without the interaction part."
+    "Now we calculate the *extra sum of squares* adding the interaction part of the design to a design without the interaction part.\n",
+    "\n",
+    "We start by estimating the design without the interaction part - therefore, a design that just models the main effects."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0c458715",
+   "id": "7551bd5d",
    "metadata": {},
    "outputs": [
     {
@@ -894,10 +896,12 @@
    ],
    "source": [
     "# Hat matrix for main effects part of design.\n",
-    "H1 = X1 @ np.linalg.pinv(X1)\n",
+    "# X1 is the main-effects part of the design.\n",
+    "H_for_X1 = X1 @ np.linalg.pinv(X1)\n",
     "# Residual forming matrix for X1\n",
-    "rfm1 = np.eye(n) - H1\n",
-    "# Errors and residual sum of squares\n",
+    "rfm1 = np.eye(n) - H_for_X1\n",
+    "# Errors and residual sum of squares for design that\n",
+    "# only includes the main effects.\n",
     "e1 = rfm1 @ y\n",
     "RSS1 = np.sum(e1 ** 2)\n",
     "RSS1"
@@ -906,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1fc84ad6",
+   "id": "4a7ba646",
    "metadata": {},
    "outputs": [
     {
@@ -924,8 +928,8 @@
     "# Residual sum of squares for full design (X1 with X2)\n",
     "# We calculated this above, but just for completeness,\n",
     "# calculate again.\n",
-    "H = X @ np.linalg.pinv(X)\n",
-    "rfm = np.eye(n) - H\n",
+    "H_for_X = X @ np.linalg.pinv(X)\n",
+    "rfm = np.eye(n) - H_for_X\n",
     "e = rfm @ y\n",
     "RSS = np.sum(e ** 2)\n",
     "RSS"
@@ -934,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "74e9b288",
+   "id": "66aaeb00",
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "941b4008",
+   "id": "253e2811",
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c1bbf5a",
+   "id": "c907ae2c",
    "metadata": {},
    "source": [
     "Theorem 2 of Computational Statistics and Data Analysis 54 (2010) 1881–1893 states that we can also calculate the ESS with:"
@@ -1050,13 +1054,13 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d4d7cc50",
+   "id": "9168af35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "33.90406827096389"
+       "33.904068270963904"
       ]
      },
      "execution_count": 20,
@@ -1065,14 +1069,157 @@
     }
    ],
    "source": [
+    "# Applying formula 2 from paper above.\n",
     "# X2, after removing everything modeled in X1\n",
     "X_rr = rfm1 @ X2\n",
     "# Calculate hat matrix for X_rr\n",
-    "H_rr = X_rr @ np.linalg.pinv(X_rr)\n",
+    "pX_rr = np.linalg.pinv(X_rr)\n",
+    "H1 = X_rr @ pX_rr\n",
     "# Adjusted SNSQGM metric.\n",
-    "ESS1_via_y = y @ H_rr @ y\n",
+    "y_hat1 = H1 @ y\n",
+    "ESS1_via_y_hat = y @ y_hat1\n",
     "# We get exactly the same answer as before.\n",
-    "ESS1_via_y"
+    "ESS1_via_y_hat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d0f8d3e",
+   "metadata": {},
+   "source": [
+    "The calculation above, gives the same result as the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "21071c9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33.90406827096382"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(y_hat1 ** 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48b59d69",
+   "metadata": {},
+   "source": [
+    "Put another way, the sum of squares of `y * y_hat1` equals the sum of squares of `y_hat1 * y_hat1`.  In fact, this is so for any `y` and `X` in our case of least-squares fitting.  Why?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f0c715f",
+   "metadata": {},
+   "source": [
+    "The sum of squares above is the same operation as the [vector dot product](http://matthew-brett.github.io/teaching/on_vectors.html) of the vector on itself - meaning that the *dot* product is just another way of writing that calculation.  Write `y_hat1` as $\\hat{y}$ ($y$ with a hat on top). In mathematics we would write the dot product of $\\hat{y}$ on itself as:\n",
+    "\n",
+    "$$\n",
+    "\\hat{y} . \\hat{y}\n",
+    "$$\n",
+    "\n",
+    "In code it looks like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "474db936",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33.904068270963826"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot(y_hat1, y_hat1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cacddc2e",
+   "metadata": {},
+   "source": [
+    "Above we discovered that $y . \\hat{y} = \\hat{y} . \\hat{y}$.\n",
+    "\n",
+    "This is because we have decomposed $y$ into $\\hat{y}$ and a vector of errors (residuals) $e$:\n",
+    "\n",
+    "$$\n",
+    "y = X B + e\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\hat{y} = X B\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "y = \\hat{y} + e\n",
+    "$$\n",
+    "\n",
+    "Because of the least squares fitting for $B$, $e$ is orthogonal to all the columns of $X$, and therefore, $\\hat{y}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6a378f9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.194245199571014e-14"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e = y - y_hat1\n",
+    "# This is the dot product - (very near) zero if vectors orthogonal\n",
+    "np.dot(e, y_hat1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "179a81b3",
+   "metadata": {},
+   "source": [
+    "Therefore, because $y = \\hat{y} + e$, and $e . \\hat{y} = 0$, by the [algebra of dot products](http://matthew-brett.github.io/teaching/on_vectors.html#distributive-over-vector-addition):\n",
+    "\n",
+    "$$\n",
+    "y . \\hat{y} = (\\hat{y} + e) . \\hat{y} = \\\n",
+    "\\hat{y} . \\hat{y} + e . \\hat{y} = \\hat{y} . \\hat{y}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1a50890",
+   "metadata": {},
+   "source": [
+    "The calculation $\\hat{y} . \\hat{y}$ above is a direct match to the SNSQGM calculation in the balanced case - the calculation has the effect of squaring the adjusted mean values and multiplying by their respective group counts."
    ]
   }
  ],
